Optimize key handling and DMA copy

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -293,7 +293,7 @@ CFLAGS = $(ARCHCFG)
 #CFLAGS += -O3	# optimize even more
 #CFLAGS += -Ofast # optimize for speed
 #CFLAGS += -Og -g3 # optimize for debugger (use together with -g0..-g3, level of debugging information)
-CFLAGS += -Os	# optimize for size
+CFLAGS += -O2 -flto   # optimize for speed with link-time optimization
 
 # Do not use built-in functions. This is case when compiller changes printf("x") to putchar('x').
 #CFLAGS += -fno-builtin
